[package]
name = "recrypt-node-binding"
version = "0.9.2-pre"
authors = ["IronCore Labs <code@ironcorelabs.com>"]
edition = "2021"
rust-version = "1.56.0"

[lib]
name = "recrypt_node"
crate-type = ["cdylib"]

[dependencies]
neon = { version = "0.10", default-features = false, features = ["napi-4"] }
recrypt = "0.13.1"

[profile.release]
lto = true
debug = false
