[package]
name = "recrypt-node-binding"
version = "0.11.0"
authors = ["IronCore Labs <code@ironcorelabs.com>"]
edition = "2024"
rust-version = "1.85.0"

[lib]
name = "recrypt_node"
crate-type = ["cdylib"]

[dependencies]
neon = { version = "0.10", default-features = false, features = ["napi-4"] }
recrypt = "0.14.1"

[profile.release]
lto = true
debug = false
