[package]
name = "recrypt-node-binding"
version = "0.4.1"
authors = ["IronCore Labs <code@ironcorelabs.com>"]

[lib]
name = "recrypt_node"
crate-type = ["dylib"]

[dependencies]
recrypt = "~0.8"
#Pin this version and neon-build below because of https://github.com/neon-bindings/neon/issues/455
neon = "=0.3.1"

[build-dependencies]
neon-build = "=0.3.1"

[profile.release]
lto = true
debug = false
