[package]
name = "recrypt-node-binding"
version = "0.7.4-pre.14"
authors = ["IronCore Labs <code@ironcorelabs.com>"]
build = "build.rs"

[lib]
name = "recrypt_node"
crate-type = ["cdylib"]

[dependencies]
neon = "0.4"
recrypt = "~0.11"

[build-dependencies]
neon-build = "0.4"

[profile.release]
lto = true
debug = false
